<resources>
    <string name="app_name">Omurice</string>
    <string name="NEXT">GET STARTED</string>
    <string name="welcome">Welcome to <font color='#2FAA7A'>Omurice</font></string>
    <string name="p1_home">Mulai perjalanan Anda dengan Sayur dan Beras dan temukan beragam pilihan segar dan berkualitas setiap hari.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_again">Hello Again!</string>
    <string name="ucapan_hiagain">Hi Selamat Datang Kembali Dari Mana Aja!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_welcome">Hello Welcome!</string>
    <string name="ayo_buat_akun_sekarang">Ayo Buat Akun Sekarang</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_email_address_anda">Masukkan email address anda!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="atau">Atau</string>
    <string name="title_activity_main_tampilan_utama">MainActivityTampilanUtama</string>
    <string name="title_activity_tampilan_utama">TampilanUtama</string>
    <string name="My_Cart">My Cart</string>
    <string name="Checkout">Checkout</string>
    <string name="Back">Back</string>
    <string name="back" />
    <string name="keterangan">You Might Also Need</string>
    <string name="bwgmrh" />
    <string name="remove" />
    <string name="add" />
    <string name="harga">Rp28.000</string>
    <string name="bobot">1Kg</string>
    <string name="produk">Tomat</string>
    <string name="tomat" />
    <string name="kuantitas">3</string>
    <string name="bawang_merah">Bawang Merah</string>
    <string name="favorite_list">Favorite Lists</string>
    <string name="beras_pulen">Beras Pulen</string>
    <string name="rp_20_000">Rp20.000</string>
    <string name="shop" />
    <string name="bill" />
    <string name="profile" />
    <string name="hint_search">Search</string>
    <string name="desc_back">Back</string>
    <string name="desc_filter">Filter</string>
    <string name="desc_search_icon">Search Icon</string>
    <string name="filter">Filter</string>
    <string name="Wortel">Wortel</string>
    <string name="bobotwrtel">500gr</string>
    <string name="hargaa">Rp8.000</string>
    <string name="hargatomat">Rp5.000</string>
    <string name="bobottmt">250gr</string>
    <string name="kuantitaswrtl">1</string>
    <string name="kuantitastmt">2</string>
    <string name="bawang_putih">Bawang Putih</string>
    <string name="hargabp">Rp25.000</string>
    <string name="kentang">Kentang</string>
    <string name="kubis">Kubis</string>
    <string name="hargakbs">Rp10.000</string>
    <string name="cabe">Cabai Merah</string>
    <string name="hargacb">Rp23.000</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="best_product">Best Products</string>
    <string name="desc_home">desc_home</string>
    <string name="desc_shop">desc_shop</string>
    <string name="desc_profil">desc_profil</string>
    <string name="desc_bill">desc_bill</string>
    <string name="beras_top">Beras TOP</string>
    <string name="_5000g_packet">5000g packet</string>
    <string name="rp_75_000">Rp75.000</string>
    <string name="Shipping">Shipping</string>
    <string name="AddLocation">Add Location</string>
    <string name="Home">Home</string>
    <string name="No1">+6889423561\n2564 Calhoun, Florida</string>
    <string name="Office">+Office</string>
    <string name="No2">++6889423561\n5847 Ala St, FI</string>
    <string name="No3">****4586</string>
    <string name="EditHome">Edit Home</string>
    <string name="VisaCard">Visa Card</string>
    <string name="EditOffice">Edit Office</string>
    <string name="Visa">Visa</string>
    <string name="No4">****7582</string>
    <string name="MasterCard">Master Card</string>
    <string name="AddCard">Add Card</string>
    <string name="Payment">Payment</string>
    <string name="PaymentSummary">Payment Summary</string>
    <string name="tigaItem">3 Item</string>
    <string name="no5">$45.00</string>
    <string name="DeliveryFee">Delivery Fee</string>
    <string name="no6">$2.35</string>
    <string name="TotalPayment">Total Payment</string>
    <string name="no7">$47.35</string>
    <string name="GroceryPay">Grocery Pay</string>
    <string name="YourBalance">Your Balance</string>
    <string name="no8">$18.25</string>
    <string name="DebitCreditCard">Debit/CreditCard</string>
    <string name="no9">**** 7582</string>
    <string name="PaymentViaBank">Payment Via Bank</string>
    <string name="AmarBank">Amar Bank</string>
    <string name="MegaBank">Mega Bank</string>
    <string name="LineBank">Line Bank</string>
    <string name="Moneybag">Money Bag</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="recov_pw_img">recov pw img</string>
    <string name="back_rcvrpw">back rcvrpw</string>
    <string name="tolong_pilih_salah_satu_opsi_di_bawah_untuk_pemulihan_akun_pilih_salah_satu_untuk_melanjutkan">Tolong pilih salah satu opsi di bawah untuk pemulihan akun, Pilih salah satu untuk melanjutkan</string>
    <string name="via_message">Via Message</string>
    <string name="_6889423561">+6889423561</string>
    <string name="via_email">via email</string>
    <string name="johan18_gmail_com">johan18@gmail.com</string>
    <string name="p6285763456">+6285763456</string>
    <string name="send">Send</string>
    <string name="kembali_ke">Kembali ke</string>
    <string name="sign_in_rscvr">Sign In</string>
    <string name="MyOrder">My Order</string>
    <string name="more">Titik 3</string>
    <string name="Completed">Completed</string>
    <string name="OnProcess">On Process</string>
    <string name="your_pocket_friendly_shop">Your Pocket-Friendly Grocery Shopping</string>
    <string name="Order1">Order ID  GJKI122N</string>
    <string name="check">check</string>
    <string name="OrderAccepted">Order Accepted</string>
    <string name="DeliverTo">Deliver To</string>
    <string name="myhome">My Home 🏡</string>
    <string name="TotalPaymentt">Total Payment</string>
    <string name="hargaorder1">Rp78.000</string>
    <string name="myoffice">My Office</string>
    <string name="Order2">Order ID OMF02365</string>
    <string name="hargaorder2">Rp95.000</string>
    <string name="Order3">Order ID TGAI0976</string>
    <string name="otheraddress">Taman Melati No. 22, Jakarta</string>
    <string name="hargaorder3">Rp28.000</string>
    <string name="rice">Rice</string>
    <string name="myprofile">My Profile</string>
    <string name="edt">edit</string>
    <string name="nama1">Johan Abraham</string>
    <string name="totalorder1">1.25k</string>
    <string name="TotalOrder">Total Order</string>
    <string name="ordercancel2">55</string>
    <string name="OrderCancel">Order Cancel</string>
    <string name="OrderPending">Order Pending</string>
    <string name="OrderPending1">258</string>
    <string name="kodeverif">kodeverif</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_your_email_address_to_recieve_a_verifaction_code">Please Enter Your <font color='#2FAA7A'>Email Address</font> To Recieve a Verifaction Code</string>
    <string name="johan_gmail_com">johan@gmail.com</string>
    <string name="verify">Verify</string>
    <string name="new_password">New Password</string>


</resources>