<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btnBackRcvrPw"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/oval_whiteygz"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/Back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Tombol Add -->
        <TextView
            android:id="@+id/txtPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/MyOrder"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnMore"
            app:layout_constraintStart_toEndOf="@+id/btnBackRcvrPw"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/oval_whiteygz"
            android:src="@drawable/baseline_more"
            android:contentDescription="@string/more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/txtPayment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/cabe"
                    android:src="@drawable/cbe"
                    android:scaleType="fitCenter"
                    android:background="@drawable/bg_button_circle" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/bawang_merah"
                    android:src="@drawable/bwgmrh"
                    android:scaleType="fitCenter"
                    android:background="@drawable/bg_button_circle" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/kentang"
                    android:src="@drawable/kentang"
                    android:scaleType="fitCenter"
                    android:background="@drawable/bg_button_circle" />


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/bawang_putih"
                    android:src="@drawable/bwngputih"
                    android:scaleType="fitCenter"
                    android:background="@drawable/bg_button_circle" />
            </LinearLayout>
        </HorizontalScrollView>
        <!-- Tab Order Status -->
        <LinearLayout
            android:id="@+id/tabOrderStatus"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@color/hijaumuda"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@id/horizontalScroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tabOnProcess"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/OnProcess"
                android:textColor="@color/whiteygz"
                android:background="@color/hijau"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tabCompleted"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Completed"
                android:textColor="#808080"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>