<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btnBackRcvrPw"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/oval_whiteygz"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/Back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- Judul -->
        <TextView
            android:id="@+id/txtPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/myprofile"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintStart_toEndOf="@+id/btnBackRcvrPw"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Tombol More -->
        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/oval_whiteygz"
            android:src="@drawable/baseline_edit"
            android:contentDescription="@string/edt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>